src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    GE
    GT
    LE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> main multiclass
Rule 2     multiclass -> multiclass classe
Rule 3     multiclass -> empty
Rule 4     main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE
Rule 5     classe -> CLASS ID extends LBRACE variaveis metodos RBRACE
Rule 6     extends -> EXTENDS ID
Rule 7     extends -> empty
Rule 8     variaveis -> variaveis var
Rule 9     variaveis -> empty
Rule 10    metodos -> metodos metodo
Rule 11    metodos -> empty
Rule 12    var -> tipo ID
Rule 13    metodo -> PUBLIC tipo ID LPAREN paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE
Rule 14    paramsopcional -> params
Rule 15    paramsopcional -> empty
Rule 16    cmds -> cmds cmd
Rule 17    cmds -> empty
Rule 18    params -> tipo ID listaparamsextra
Rule 19    params -> empty
Rule 20    listaparamsextra -> listaparamsextra COMMA tipo ID
Rule 21    listaparamsextra -> empty
Rule 22    tipo -> INT LBRACK RBRACK
Rule 23    tipo -> BOOL
Rule 24    tipo -> INT
Rule 25    tipo -> ID
Rule 26    cmd -> LBRACE cmds RBRACE
Rule 27    cmd -> IF LPAREN exp RPAREN cmd
Rule 28    cmd -> IF LPAREN exp RPAREN cmd ELSE cmd
Rule 29    cmd -> WHILE LPAREN exp RPAREN cmd
Rule 30    cmd -> SOUTPL LPAREN exp RPAREN SEMI
Rule 31    cmd -> ID ASSIGN exp SEMI
Rule 32    cmd -> ID LBRACK exp RBRACK ASSIGN exp SEMI
Rule 33    exp -> exp LAND rexp
Rule 34    exp -> exp LOR rexp
Rule 35    exp -> rexp
Rule 36    rexp -> rexp LT aexp
Rule 37    rexp -> rexp EQ aexp
Rule 38    rexp -> rexp NE aexp
Rule 39    rexp -> aexp
Rule 40    aexp -> aexp PLUS mexp
Rule 41    aexp -> aexp MINUS mexp
Rule 42    aexp -> mexp
Rule 43    mexp -> mexp TIMES sexp
Rule 44    mexp -> mexp DIVIDE sexp
Rule 45    mexp -> sexp
Rule 46    sexp -> LNOT sexp
Rule 47    sexp -> MINUS sexp
Rule 48    sexp -> TRUE
Rule 49    sexp -> FALSE
Rule 50    sexp -> NUMBER
Rule 51    sexp -> NULL
Rule 52    sexp -> NEW INT LBRACK exp RBRACK
Rule 53    sexp -> pexp POINT LENGTH
Rule 54    sexp -> pexp LBRACK exp RBRACK
Rule 55    sexp -> pexp
Rule 56    pexp -> ID
Rule 57    pexp -> THIS
Rule 58    pexp -> NEW ID LPAREN RPAREN
Rule 59    pexp -> pexp POINT ID
Rule 60    pexp -> pexp POINT ID LPAREN expopcionalmetodo RPAREN
Rule 61    expopcionalmetodo -> exps
Rule 62    expopcionalmetodo -> empty
Rule 63    exps -> exp expslist
Rule 64    exps -> empty
Rule 65    expslist -> expslist COMMA exp
Rule 66    expslist -> empty
Rule 67    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 31 32
BOOL                 : 23
CLASS                : 4 5
COLON                : 
COMMA                : 20 65
DIVIDE               : 44
ELSE                 : 28
EQ                   : 37
EXTENDS              : 6
FALSE                : 49
GE                   : 
GT                   : 
ID                   : 4 4 5 6 12 13 18 20 25 31 32 56 58 59 60
IF                   : 27 28
INT                  : 22 24 52
LAND                 : 33
LBRACE               : 4 4 5 13 26
LBRACK               : 4 22 32 52 54
LE                   : 
LENGTH               : 53
LNOT                 : 46
LOR                  : 34
LPAREN               : 4 13 27 28 29 30 58 60
LT                   : 36
MAIN                 : 4
MINUS                : 41 47
NE                   : 38
NEW                  : 52 58
NULL                 : 51
NUMBER               : 50
PLUS                 : 40
POINT                : 53 59 60
PUBLIC               : 4 13
RBRACE               : 4 4 5 13 26
RBRACK               : 4 22 32 52 54
RETURN               : 13
RPAREN               : 4 13 27 28 29 30 58 60
SEMI                 : 13 30 31 32
SOUTPL               : 30
STATIC               : 4
STRING               : 4
THIS                 : 57
TIMES                : 43
TRUE                 : 48
VOID                 : 4
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

aexp                 : 36 37 38 39 40 41
classe               : 2
cmd                  : 4 16 27 28 28 29
cmds                 : 13 16 26
empty                : 3 7 9 11 15 17 19 21 62 64 66
exp                  : 13 27 28 29 30 31 32 32 33 34 52 54 63 65
expopcionalmetodo    : 60
exps                 : 61
expslist             : 63 65
extends              : 5
listaparamsextra     : 18 20
main                 : 1
metodo               : 10
metodos              : 5 10
mexp                 : 40 41 42 43 44
multiclass           : 1 2
params               : 14
paramsopcional       : 13
pexp                 : 53 54 55 59 60
prog                 : 0
rexp                 : 33 34 35 36 37 38
sexp                 : 43 44 45 46 47
tipo                 : 12 13 18 20
var                  : 8
variaveis            : 5 8 13

Parsing method: SLR

state 0

    (0) S' -> . prog
    (1) prog -> . main multiclass
    (4) main -> . CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    CLASS           shift and go to state 3

    prog                           shift and go to state 1
    main                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> main . multiclass
    (2) multiclass -> . multiclass classe
    (3) multiclass -> . empty
    (67) empty -> .

    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    BOOL            reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)

    multiclass                     shift and go to state 4
    empty                          shift and go to state 5

state 3

    (4) main -> CLASS . ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    ID              shift and go to state 6


state 4

    (1) prog -> main multiclass .
    (2) multiclass -> multiclass . classe
    (5) classe -> . CLASS ID extends LBRACE variaveis metodos RBRACE

    $end            reduce using rule 1 (prog -> main multiclass .)
    CLASS           shift and go to state 8

    classe                         shift and go to state 7

state 5

    (3) multiclass -> empty .

    $end            reduce using rule 3 (multiclass -> empty .)
    CLASS           reduce using rule 3 (multiclass -> empty .)


state 6

    (4) main -> CLASS ID . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    LBRACE          shift and go to state 9


state 7

    (2) multiclass -> multiclass classe .

    $end            reduce using rule 2 (multiclass -> multiclass classe .)
    CLASS           reduce using rule 2 (multiclass -> multiclass classe .)


state 8

    (5) classe -> CLASS . ID extends LBRACE variaveis metodos RBRACE

    ID              shift and go to state 10


state 9

    (4) main -> CLASS ID LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    PUBLIC          shift and go to state 11


state 10

    (5) classe -> CLASS ID . extends LBRACE variaveis metodos RBRACE
    (6) extends -> . EXTENDS ID
    (7) extends -> . empty
    (67) empty -> .

    EXTENDS         shift and go to state 13
    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    BOOL            reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)

    extends                        shift and go to state 12
    empty                          shift and go to state 14

state 11

    (4) main -> CLASS ID LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    STATIC          shift and go to state 15


state 12

    (5) classe -> CLASS ID extends . LBRACE variaveis metodos RBRACE

    LBRACE          shift and go to state 16


state 13

    (6) extends -> EXTENDS . ID

    ID              shift and go to state 17


state 14

    (7) extends -> empty .

    LBRACE          reduce using rule 7 (extends -> empty .)


state 15

    (4) main -> CLASS ID LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    VOID            shift and go to state 18


state 16

    (5) classe -> CLASS ID extends LBRACE . variaveis metodos RBRACE
    (8) variaveis -> . variaveis var
    (9) variaveis -> . empty
    (67) empty -> .

    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    BOOL            reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)

    variaveis                      shift and go to state 19
    empty                          shift and go to state 20

state 17

    (6) extends -> EXTENDS ID .

    LBRACE          reduce using rule 6 (extends -> EXTENDS ID .)


state 18

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    MAIN            shift and go to state 21


state 19

    (5) classe -> CLASS ID extends LBRACE variaveis . metodos RBRACE
    (8) variaveis -> variaveis . var
    (10) metodos -> . metodos metodo
    (11) metodos -> . empty
    (12) var -> . tipo ID
    (67) empty -> .
    (22) tipo -> . INT LBRACK RBRACK
    (23) tipo -> . BOOL
    (24) tipo -> . INT
    (25) tipo -> . ID

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)
    INT             shift and go to state 27
    BOOL            shift and go to state 28
    ID              shift and go to state 22

  ! INT             [ reduce using rule 67 (empty -> .) ]
  ! BOOL            [ reduce using rule 67 (empty -> .) ]
  ! ID              [ reduce using rule 67 (empty -> .) ]

    metodos                        shift and go to state 23
    var                            shift and go to state 24
    empty                          shift and go to state 25
    tipo                           shift and go to state 26

state 20

    (9) variaveis -> empty .

    PUBLIC          reduce using rule 9 (variaveis -> empty .)
    RBRACE          reduce using rule 9 (variaveis -> empty .)
    INT             reduce using rule 9 (variaveis -> empty .)
    BOOL            reduce using rule 9 (variaveis -> empty .)
    ID              reduce using rule 9 (variaveis -> empty .)
    LBRACE          reduce using rule 9 (variaveis -> empty .)
    IF              reduce using rule 9 (variaveis -> empty .)
    WHILE           reduce using rule 9 (variaveis -> empty .)
    SOUTPL          reduce using rule 9 (variaveis -> empty .)
    RETURN          reduce using rule 9 (variaveis -> empty .)


state 21

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    LPAREN          shift and go to state 29


state 22

    (25) tipo -> ID .

    ID              reduce using rule 25 (tipo -> ID .)


state 23

    (5) classe -> CLASS ID extends LBRACE variaveis metodos . RBRACE
    (10) metodos -> metodos . metodo
    (13) metodo -> . PUBLIC tipo ID LPAREN paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE

    RBRACE          shift and go to state 30
    PUBLIC          shift and go to state 32

    metodo                         shift and go to state 31

state 24

    (8) variaveis -> variaveis var .

    PUBLIC          reduce using rule 8 (variaveis -> variaveis var .)
    RBRACE          reduce using rule 8 (variaveis -> variaveis var .)
    INT             reduce using rule 8 (variaveis -> variaveis var .)
    BOOL            reduce using rule 8 (variaveis -> variaveis var .)
    ID              reduce using rule 8 (variaveis -> variaveis var .)
    LBRACE          reduce using rule 8 (variaveis -> variaveis var .)
    IF              reduce using rule 8 (variaveis -> variaveis var .)
    WHILE           reduce using rule 8 (variaveis -> variaveis var .)
    SOUTPL          reduce using rule 8 (variaveis -> variaveis var .)
    RETURN          reduce using rule 8 (variaveis -> variaveis var .)


state 25

    (11) metodos -> empty .

    RBRACE          reduce using rule 11 (metodos -> empty .)
    PUBLIC          reduce using rule 11 (metodos -> empty .)


state 26

    (12) var -> tipo . ID

    ID              shift and go to state 33


state 27

    (22) tipo -> INT . LBRACK RBRACK
    (24) tipo -> INT .

    LBRACK          shift and go to state 34
    ID              reduce using rule 24 (tipo -> INT .)


state 28

    (23) tipo -> BOOL .

    ID              reduce using rule 23 (tipo -> BOOL .)


state 29

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    STRING          shift and go to state 35


state 30

    (5) classe -> CLASS ID extends LBRACE variaveis metodos RBRACE .

    $end            reduce using rule 5 (classe -> CLASS ID extends LBRACE variaveis metodos RBRACE .)
    CLASS           reduce using rule 5 (classe -> CLASS ID extends LBRACE variaveis metodos RBRACE .)


state 31

    (10) metodos -> metodos metodo .

    RBRACE          reduce using rule 10 (metodos -> metodos metodo .)
    PUBLIC          reduce using rule 10 (metodos -> metodos metodo .)


state 32

    (13) metodo -> PUBLIC . tipo ID LPAREN paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE
    (22) tipo -> . INT LBRACK RBRACK
    (23) tipo -> . BOOL
    (24) tipo -> . INT
    (25) tipo -> . ID

    INT             shift and go to state 27
    BOOL            shift and go to state 28
    ID              shift and go to state 22

    tipo                           shift and go to state 36

state 33

    (12) var -> tipo ID .

    PUBLIC          reduce using rule 12 (var -> tipo ID .)
    RBRACE          reduce using rule 12 (var -> tipo ID .)
    INT             reduce using rule 12 (var -> tipo ID .)
    BOOL            reduce using rule 12 (var -> tipo ID .)
    ID              reduce using rule 12 (var -> tipo ID .)
    LBRACE          reduce using rule 12 (var -> tipo ID .)
    IF              reduce using rule 12 (var -> tipo ID .)
    WHILE           reduce using rule 12 (var -> tipo ID .)
    SOUTPL          reduce using rule 12 (var -> tipo ID .)
    RETURN          reduce using rule 12 (var -> tipo ID .)


state 34

    (22) tipo -> INT LBRACK . RBRACK

    RBRACK          shift and go to state 37


state 35

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACK RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    LBRACK          shift and go to state 38


state 36

    (13) metodo -> PUBLIC tipo . ID LPAREN paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE

    ID              shift and go to state 39


state 37

    (22) tipo -> INT LBRACK RBRACK .

    ID              reduce using rule 22 (tipo -> INT LBRACK RBRACK .)


state 38

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK . RBRACK ID RPAREN LBRACE cmd RBRACE RBRACE

    RBRACK          shift and go to state 40


state 39

    (13) metodo -> PUBLIC tipo ID . LPAREN paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE

    LPAREN          shift and go to state 41


state 40

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK . ID RPAREN LBRACE cmd RBRACE RBRACE

    ID              shift and go to state 42


state 41

    (13) metodo -> PUBLIC tipo ID LPAREN . paramsopcional RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE
    (14) paramsopcional -> . params
    (15) paramsopcional -> . empty
    (18) params -> . tipo ID listaparamsextra
    (19) params -> . empty
    (67) empty -> .
    (22) tipo -> . INT LBRACK RBRACK
    (23) tipo -> . BOOL
    (24) tipo -> . INT
    (25) tipo -> . ID

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)
    INT             shift and go to state 27
    BOOL            shift and go to state 28
    ID              shift and go to state 22

  ! INT             [ reduce using rule 67 (empty -> .) ]
  ! BOOL            [ reduce using rule 67 (empty -> .) ]
  ! ID              [ reduce using rule 67 (empty -> .) ]

    tipo                           shift and go to state 43
    paramsopcional                 shift and go to state 44
    params                         shift and go to state 45
    empty                          shift and go to state 46

state 42

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID . RPAREN LBRACE cmd RBRACE RBRACE

    RPAREN          shift and go to state 47


state 43

    (18) params -> tipo . ID listaparamsextra

    ID              shift and go to state 48


state 44

    (13) metodo -> PUBLIC tipo ID LPAREN paramsopcional . RPAREN LBRACE variaveis cmds RETURN exp SEMI RBRACE

    RPAREN          shift and go to state 49


state 45

    (14) paramsopcional -> params .

    RPAREN          reduce using rule 14 (paramsopcional -> params .)


state 46

    (15) paramsopcional -> empty .
    (19) params -> empty .

  ! reduce/reduce conflict for RPAREN resolved using rule 15 (paramsopcional -> empty .)
    RPAREN          reduce using rule 15 (paramsopcional -> empty .)

  ! RPAREN          [ reduce using rule 19 (params -> empty .) ]


state 47

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN . LBRACE cmd RBRACE RBRACE

    LBRACE          shift and go to state 50


state 48

    (18) params -> tipo ID . listaparamsextra
    (20) listaparamsextra -> . listaparamsextra COMMA tipo ID
    (21) listaparamsextra -> . empty
    (67) empty -> .

    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    BOOL            reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)

    listaparamsextra               shift and go to state 51
    empty                          shift and go to state 52

state 49

    (13) metodo -> PUBLIC tipo ID LPAREN paramsopcional RPAREN . LBRACE variaveis cmds RETURN exp SEMI RBRACE

    LBRACE          shift and go to state 53


state 50

    (4) main -> CLASS ID LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LBRACE . cmd RBRACE RBRACE
    (26) cmd -> . LBRACE cmds RBRACE
    (27) cmd -> . IF LPAREN exp RPAREN cmd
    (28) cmd -> . IF LPAREN exp RPAREN cmd ELSE cmd
    (29) cmd -> . WHILE LPAREN exp RPAREN cmd
    (30) cmd -> . SOUTPL LPAREN exp RPAREN SEMI
    (31) cmd -> . ID ASSIGN exp SEMI
    (32) cmd -> . ID LBRACK exp RBRACK ASSIGN exp SEMI

    LBRACE          shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    SOUTPL          shift and go to state 59
    ID              shift and go to state 54

    cmd                            shift and go to state 56

state 51

    (18) params -> tipo ID listaparamsextra .
    (20) listaparamsextra -> listaparamsextra . COMMA tipo ID

    RPAREN          reduce using rule 18 (params -> tipo ID listaparamsextra .)
    COMMA           shift and go to state 60


state 52

    (21) listaparamsextra -> empty .

    RPAREN          reduce using rule 21 (listaparamsextra -> empty .)
    COMMA           reduce using rule 21 (listaparamsextra -> empty .)


state 53

    (13) metodo -> PUBLIC tipo ID LPAREN paramsopcional RPAREN LBRACE . variaveis cmds RETURN exp SEMI RBRACE
    (8) variaveis -> . variaveis var
    (9) variaveis -> . empty
    (67) empty -> .

    $end            reduce using rule 67 (empty -> .)
    CLASS           reduce using rule 67 (empty -> .)
    LBRACE          reduce using rule 67 (empty -> .)
    PUBLIC          reduce using rule 67 (empty -> .)
    RBRACE          reduce using rule 67 (empty -> .)
    INT             reduce using rule 67 (empty -> .)
    BOOL            reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    RPAREN          reduce using rule 67 (empty -> .)
    RETURN          reduce using rule 67 (empty -> .)
    IF              reduce using rule 67 (empty -> .)
    WHILE           reduce using rule 67 (empty -> .)
    SOUTPL          reduce using rule 67 (empty -> .)
    COMMA           reduce using rule 67 (empty -> .)

    variaveis                      shift and go to state 61
    empty                          shift and go to state 20

state 54
